--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "Redha",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.13.0",
+    "mongoose": "^6.0.11",
+    "multer": "^1.4.3"
   }
 }
